Fixed carousel positioning on smaller devices and menu icon appearance

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,6 @@
   margin-bottom: 48px;
 }
 
-.login-container {
-  width: fit-content;
-  margin: 20vh auto;
-}
-
 .login-btn {
   padding: 20px 40px;
 }
@@ -19,5 +14,11 @@
 @media only screen and (max-width: 768px) {
   .photo {
       margin-top: 0;
+  }
+}
+
+@media only screen and (max-width: 355px) {
+  .photo {
+    height: 200px;
   }
 }
