--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,6 +28,12 @@
     align-items: center;
 }
 
+.menu-icon {
+    color: white;
+    text-shadow: 0px 0px 10px #00000071;
+    font-size: 32px;
+}
+
 .nav-link {
     margin-left: 12px;
     font-size: 16px;
@@ -38,10 +44,15 @@
 .navbar {
     padding: 0;
     font-family: 'Comfortaa', cursive;
+    /* background-color: rgba(0, 7, 29, 0.37); */
 }
 
 .navbar a {
     color:#ffffff;
+}
+
+.navbar-dark .navbar-toggler {
+    border: 0;
 }
 
 @media only screen and (max-width: 768px) {
@@ -52,5 +63,9 @@
 
     .nav-link {
         padding: 4px
+    }
+
+    .menu-icon {
+        margin-right: 10px;
     }
 }
